# simple-rust-example-amazon-bedrock

./: Cargo.toml  README.md
guardrails/: Cargo.toml  README.md
guardrails/src/: main.rs
knowledge-bases/: Cargo.toml  README.md
knowledge-bases/src/: lib.rs  main.rs
src/: lib.rs  main.rs
streaming-example/: Cargo.toml  LICENSE  README.md
streaming-example/src/: lib.rs  main.rs
