[package]
name = "hello_bedrock"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
aws-config = "1.5.17"
aws-sdk-bedrockagentruntime = "1.80.0"
aws-sdk-bedrockruntime = "1.75.0"
aws-types = "1.3.5"
colored = "3.0.0"
figlet-rs = "0.1.5"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
